zabbix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-service
  namespace: zabbix
spec:
  selector:
    app: zabbix-server
  ports:
    - protocol: TCP
      port: 10051
      targetPort: 10051
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-frontend-service
  namespace: zabbix
spec:
  selector:
    app: zabbix-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
